# UniShare

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  requirements.txt  run.py  unishare.spec
.opencde/: PULL_REQUEST_TEMPLATE.md
.opencde/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: unishare-config.yaml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  USER_MANUAL.md
scripts/: download_third_party.sh
src/unishare/: __main__.py
src/unishare/core/: config.py  connection.py  discovery.py  logger.py
src/unishare/gui/: main_window.py
src/unishare/modules/: base.py  file_share.py  file_share_main.py  input_share.py  usb_share.py
src/unishare/modules/file_share/: __init__.py  chunk.py  progress.py  resume.py
src/unishare/modules/screen_extend/: __init__.py  bitrate.py  manager.py  module.py  monitor.py  recovery.py  virtual_display.py
src/unishare/utils/: common.py  platform.py
src/unishare/utils/inputleap/: __init__.py  backend.py  screen_layout.py  smooth.py
src/unishare/utils/usbip/: __init__.py  backend.py  client.py  protocol.py  scanner.py  server.py  sync.py
