[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unishare"
version = "0.1.0"
description = "全平台跨机共享一体化工具 - 键鼠/剪贴板/USB/文件一站式共享"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.12"
authors = [
    {name = "UniShare Team"}
]
keywords = ["cross-platform", "share", "keyboard", "mouse", "usb", "file-transfer", "synergy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PyYAML>=6.0.2",
    "structlog>=24.4.0",
    "zeroconf>=0.132.2",
    "PySide6>=6.7.0",
    "psutil>=6.0.0",
]

[project.scripts]
unishare = "unishare.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
